<resources>
    <string name="app_name">IRead</string>
    <string name="receiving_shared_label">IRead·search</string>
    <string name="tip_perm_request_storage">IRead needs storage access to find and read books. please go "App Settings" to allow "Storage permission".</string>
    <string name="menu_backup">Home</string>
    <string name="menu_restore">Restore</string>
    <string name="menu_import_old">Import IRead data</string>
    <string name="webdav_cache_backup">Offline cache book backup</string>
    <string name="webdav_cache_backup_s">Export to local and back up to the exports directory under the IRead folder</string>
    <string name="backup_path">Backup to</string>
    <string name="select_backup_path">Please select a backup path.</string>
    <string name="menu_import_old_version">Import legacy data</string>
    <string name="menu_import_github">Import github data</string>
    <string name="menu_replace_rule">Replacement</string>
    <string name="menu_send">Send</string>
    <string name="dialog_title">Prompt</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_confirm">Confirm</string>
    <string name="dialog_setting">Go to Settings</string>
    <string name="tip_cannot_jump_setting_page">Cannot jump to Settings.</string>
    <string name="dynamic_click_retry">Retry</string>
    <string name="dynamic_loading">Loading</string>
    <string name="draw">Warning</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="custom_export_section">Custom export chapter of epub</string>
    <string name="replace">Replace</string>
    <string name="replace_purify">Replacement</string>
    <string name="replace_purify_desc">Configure replacement rules</string>
    <string name="not_available">Not available now</string>
    <string name="enable">Enable</string>
    <string name="replace_purify_search">Search Replacement</string>
    <string name="bookshelf">Bookshelf</string>
    <string name="favorites">Favorites</string>
    <string name="favorite">Favorite</string>
    <string name="in_favorites">in Favorites</string>
    <string name="out_favorites">Not in Favorites</string>
    <string name="rss">RSS feeds</string>
    <string name="all">All</string>
    <string name="recent_reading">Recent reading</string>
    <string name="last_read">Last reading</string>
    <string name="update_log">What\'s new</string>
    <string name="bookshelf_empty">The bookshelf is still empty. Click the icon to add from the local</string>
    <string name="action_search">Search</string>
    <string name="action_download">Download</string>
    <string name="layout_list">List</string>
    <string name="layout_grid3">Grid-3</string>
    <string name="layout_grid4">Grid-4</string>
    <string name="layout_grid5">Grid-5</string>
    <string name="layout_grid6">Grid-6</string>
    <string name="bookshelf_layout">Layout</string>
    <string name="view">View</string>
    <string name="book_library">Library</string>
    <string name="book_local">Import books</string>
    <string name="book_source">Book sources</string>
    <string name="book_source_manage">Sources management</string>
    <string name="book_source_manage_desc">Create/Import/Edit/Manage Book sources</string>
    <string name="setting">Settings</string>
    <string name="theme_setting">Theme settings</string>
    <string name="theme_setting_s">Some settings related to interface or color</string>
    <string name="other_setting">Other settings</string>
    <string name="other_setting_s">Some function-related settings</string>
    <string name="about">About</string>
    <string name="donate">Donations</string>
    <string name="exit">Exit</string>
    <string name="exit_no_save">It has not been saved. Do you want to continue editing?</string>
    <string name="read_style">Book styles</string>
    <string name="version">Version</string>
    <string name="local">Local</string>
    <string name="search">Search</string>
    <string name="origin_format">Origin: %s</string>
    <string name="read_dur_progress">Origin: %s</string>
    <string name="book_name">Title</string>
    <string name="lasted_show">Latest: %s</string>
    <string name="check_add_bookshelf">Would you like to add %s to your Bookshelf?</string>
    <string name="import_books_count">%s text file(s) in total</string>
    <string name="is_loading">Loading…</string>
    <string name="retry">Retry</string>
    <string name="web_service">Web service</string>
    <string name="web_service_desc">Web edit source and read book</string>
    <string name="web_edit_source">Edit book sources on the web</string>
    <string name="offline_cache">Offline cache</string>
    <string name="offline_cache_t">Offline cache</string>
    <string name="offline_cache_s">cache the selected chapter(s) to Storage</string>
    <string name="change_origin">Change Origin</string>
    <string name="about_description">
        \u3000\u3000 This is a reading software developed using Kotlin, thank you for your use.
    </string>
    <string name="app_share_description">
        IRead (YueDu 3.0) download link：\n https://play.google.com/store/apps/details?id=io.legado.play.release
    </string>
    <string name="version_name">Version %s</string>
    <string name="pt_background_verification">Background-verification</string>
    <string name="ps_background_verification">you can operate freely when verifying the book source</string>
    <string name="pt_auto_refresh">Auto-refresh</string>
    <string name="ps_auto_refresh">Update books automatically when opening the software</string>
    <string name="pt_auto_download">Auto-download</string>
    <string name="ps_auto_download">Download the latest chapters automatically  when updating books</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="web_dav_set">WebDav settings</string>
    <string name="web_dav_set_import_old">settings/Import legacy data</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="backup_permission">Backup needs storage permission</string>
    <string name="restore_permission">Restore needs storage permission</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="backup_confirmation">Backup confirmation</string>
    <string name="backup_message">The new backup files will replace the original.\n Backup folder: YueDu</string>
    <string name="restore_confirmation">Restore confirmation</string>
    <string name="restore_message">Restoring the bookshelf data will overwrite the current Bookshelf.</string>
    <string name="backup_success">Backup succeed</string>
    <string name="backup_fail">Backup failed\n%s</string>
    <string name="on_restore">Restoring</string>
    <string name="chapter_list">Chapters</string>
    <string name="refresh">Refresh</string>
    <string name="clear_cache">Clear cache</string>
    <string name="action_save">Save</string>
    <string name="import_local">Import local</string>
    <string name="threads_num_title">Number of concurrent tasks</string>
    <string name="content">Content</string>
    <string name="bookshelf_management">Bookshelf management</string>
    <string name="ps_default_read">Use Bookshelf as start page</string>
    <string name="pt_default_read">Auto jump to Recent list</string>
    <string name="update_toc">Update chapters</string>
    <string name="help">Help</string>
    <string name="speak_engine">Speak Engine</string>
    <string name="group_manage">Group management</string>
    <string name="show_rss">Show RSS feeds</string>
    <string name="add_to_text_context_menu_s">Long tap to display IRead·Search in the operation menu</string>
    <string name="add_to_text_context_menu_t">Text operation display Search</string>
    <string name="record_log">Record log</string>
    <string name="aloud_config">Speech settings</string>
    <string name="main_activity">Start page</string>
    <string name="name">Name</string>
    <string name="media_button_on_exit_title">Headset buttons are always available</string>
    <string name="media_button_on_exit_summary">Headset buttons are available even exit the app.</string>
    <string name="backup_summary">Backup the local</string>
    <string name="restore_summary">Restore form the local backup on long click</string>
    <string name="import_old_summary">Select a legacy backup folder</string>
    <string name="clear_cache_summary">Clear the cache of the downloaded books and fonts</string>
    <string name="restore_ignore">Bypass list</string>
    <string name="restore_ignore_summary">Ignore some contents while restoring</string>
    <string name="replace_enable_default_t">Enable replace rule by default</string>
    <string name="replace_enable_default_s">For new added books</string>
    <string name="language">Language</string>
    <string name="auto_clear_expired">"Clear expired search histories automatically "</string>
    <string name="auto_clear_expired_summary">Search histories more than one day</string>
    <string name="pre_download">Download in advance</string>
    <string name="pre_download_s">Download %s chapters in advance</string>
    <string name="show_discovery">Show Discovery</string>
    <string name="pref_cronet_summary">use Cronet access network</string>
    <string name="anti_alias">Anti-Aliasing</string>
    <string name="pref_anti_alias_summary">Anti-Aliasing when draw picture</string>
    <string name="book_tree_uri_t">Book Save Location</string>
    <string name="book_tree_uri_s">Save location for books opened from other apps</string>
    <string name="user_agent">User agent</string>
    <string name="check_source_config">Check setting</string>
    <string name="record_debug_log">Record debug log</string>
    <string name="cache_export">Cache / Export</string>
    <string name="bitmap_cache_size_summary">Current cache max size %1$s MB</string>
    <string name="bitmap_cache_size">bitmap cache size</string>
    <string name="show_add_to_shelf_alert_title">Prompt to add to bookshelf when return</string>
    <string name="show_add_to_shelf_alert_summary">Prompt to add to bookshelf when return from reading books that are not on the bookshelf</string>
    <string name="ignore_audio_focus_title">Ignore audio focus</string>
    <string name="ignore_audio_focus_summary">Allow audio to be played at the same time as other applications</string>
    <string name="source_edit_text_max_line">Maximum number of rows in the source edit box</string>
    <string name="clear_webview_data">Clear WebView Data</string>
    <string name="clear_webview_data_summary">Clear all data in WebView</string>
    <string name="set_local_password">Setting the local password</string>
    <string name="set_local_password_summary">The local password is used to encrypt and decrypt the sensitive information of the backup, if you need to synchronize between different devices, the local password should be the same.</string>
    <string name="only_latest_backup_t">Keep only the latest backup</string>
    <string name="only_latest_backup_s">Local backup keeps only the latest backup file</string>
    <string name="shrink_database">Shrink database</string>
    <string name="shrink_database_summary">Reduce the size of the database file</string>
    <string name="record_heap_dump_s">Saving a heap dump when the application crashes by OOM</string>
    <string name="record_heap_dump_t">Capture heap dump</string>
    <string name="add_voice">Create Speaker</string>
    <string name="engine_setting">Engine settings</string>
    <string name="cache_manager">Read Aloud Cache</string>
    <string name="clear_tts_cache">Clear read aloud cache</string>
    <string name="dialogue">Dialogue</string>
    <string name="speaker">Speaker</string>
    <string name="clear_llm">Clear Analyse Engine</string>
</resources>