<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search"
        app:showAsAction="always" />

    <item
        android:id="@+id/menu_update_toc"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/update_toc"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_add_local"
        android:icon="@drawable/ic_add"
        android:title="@string/book_local"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_aloud_config"
        android:icon="@drawable/ic_read_aloud"
        android:title="@string/aloud_config"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bookshelf_manage"
        android:icon="@drawable/ic_arrange"
        android:title="@string/bookshelf_management"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_download"
        android:icon="@drawable/ic_download_line"
        android:title="@string/cache_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_group_manage"
        android:icon="@drawable/ic_groups"
        android:title="@string/group_manage"
        app:showAsAction="never" />

    <item
        android:id="@+id/menu_bookshelf_layout"
        android:icon="@drawable/ic_view_quilt"
        android:title="@string/bookshelf_layout"
        app:showAsAction="never" />



</menu>