<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_black_24dp"
        android:title="@string/refresh"
        app:showAsAction="always" />
    <item
        android:id="@+id/menu_aloud_config"
        android:icon="@drawable/ic_settings"
        android:title="@string/engine_setting"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clear_cache"
        android:title="@string/clear_tts_cache"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_clear_llm"
        android:title="@string/clear_llm"
        android:icon="@drawable/ic_clear_all"
        app:showAsAction="never" />


</menu>