<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/vw_bg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@drawable/shape_card_view"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tool_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="?attr/actionBarStyle"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:title="@string/dialogue"
            app:titleTextAppearance="@style/ToolbarTitle" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="ifContentScrolls">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:id="@+id/ll_tts_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/book_name"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_book_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/book_name"
                            android:textColor="@color/tv_text_summary"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_tts_chapter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_chapter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/chapter_list"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_book_chapter"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/chapter_list"
                            android:textColor="@color/tv_text_summary"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_tts_content"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_title"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/content"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp" />

                        <TextView
                            android:id="@+id/tv_wav_text"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/content"
                            android:textColor="@color/tv_text_summary"
                            android:textSize="14sp" />

                    </LinearLayout>
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/ll_tts_speaker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    android:padding="8dp">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.0"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/tv_speaker"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:text="@string/speaker"
                            android:textColor="@color/primaryText"
                            android:textSize="16sp" />
                        <ltd.finelink.read.lib.theme.view.ThemeEditText
                            android:id="@+id/tv_speaker_name"
                            android:text="@string/name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>
        <ltd.finelink.read.ui.widget.anima.RotateLoading
            android:id="@+id/rotate_loading"
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:layout_margin="6dp"
            android:visibility="gone"
            android:layout_gravity="center"
            app:loading_width="2dp" />
        <com.google.android.flexbox.FlexboxLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="12dp"
            android:paddingRight="12dp"
            app:flexWrap="wrap"
            app:justifyContent="space_between">

            <Space
                android:layout_width="0dp"
                android:layout_height="0dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/cancel"
                    android:textColor="@color/secondaryText"
                    tools:ignore="RtlHardcoded" />

                <ltd.finelink.read.ui.widget.text.AccentTextView
                    android:id="@+id/tv_ok"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="12dp"
                    android:text="@string/action_save"
                    tools:ignore="RtlHardcoded" />

            </LinearLayout>

        </com.google.android.flexbox.FlexboxLayout>
    </LinearLayout>

</FrameLayout>
